--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,4 @@
-div {
-  background-color: #99cc00;
-  padding: 10px;
-}
+@import './styles/constants.css';
+@import './styles/global.css';
+@import './styles/header.css';
+@import './styles/menu.css';
