--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,25 +3,31 @@
 }
 
 :global html {
-  font-size: 14px;
+  font-size: 16px;
   overflow-y: scroll;
   scroll-behavior: smooth;
   text-size-adjust: 100%;
 }
 
 body {
-  background-image: linear-gradient(
-    16deg,
-    var(--yellow) 0%,
-    var(--aquamarine) 100%
-  );
-  font-family: var(--sans-serif);
+  font-family: var(--cursive);
   padding: var(--base-space);
   position: relative;
+  background-color: var(--white);
+  background-image: linear-gradient(
+      90deg,
+      transparent var(--base-space),
+      #abced4 var(--base-space),
+      #abced4 calc(var(--base-space) + 2px),
+      transparent calc(var(--base-space) + 2px)
+    ),
+    linear-gradient(var(--cream) 0.1rem, transparent 0.1rem);
+  background-size: 100% 1.15rem;
 }
 
 h1,
 h2 {
+  font-family: var(--sans-serif);
   text-shadow: 2px 4px 0 var(--black), -1px -1px 0 var(--black),
     1px -1px 0 var(--black), -1px 1px 0 var(--black), 1px 1px 0 var(--black);
   color: var(--white);
@@ -29,4 +35,9 @@ h2 {
 
 section {
   height: 100vh;
+  padding: var(--base-space);
+}
+
+ul {
+  list-style-image: url('../assets/dot.svg');
 }
