--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,5 +1,5 @@
 menu {
-  background: linear-gradient(45deg, var(--greyBlue) 0%, var(--pink) 100%);
+  background: linear-gradient(45deg, var(--green) 0%, var(--red) 100%);
   height: 100%;
   left: 140%;
   margin: 0;
