--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,8 +17,8 @@ body {
   background-image: linear-gradient(
       90deg,
       transparent var(--base-space),
-      #abced4 var(--base-space),
-      #abced4 calc(var(--base-space) + 2px),
+      var(--notebook) var(--base-space),
+      var(--notebook) calc(var(--base-space) + 2px),
       transparent calc(var(--base-space) + 2px)
     ),
     linear-gradient(var(--cream) 0.1rem, transparent 0.1rem);
@@ -27,10 +27,12 @@ body {
 
 h1,
 h2 {
+  color: var(--white);
   font-family: var(--sans-serif);
   text-shadow: 2px 4px 0 var(--black), -1px -1px 0 var(--black),
     1px -1px 0 var(--black), -1px 1px 0 var(--black), 1px 1px 0 var(--black);
-  color: var(--white);
+  transform: var(--base-rotation);
+  transform-origin: var(--base-transform-origin);
 }
 
 section {
