--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,10 +4,8 @@
   height: 60px;
   padding: 1rem;
   position: fixed;
-  right: 0rem;
-  right: 1.4rem;
-  top: 0.3rem;
-  top: 1.1rem;
+  right: 0;
+  top: 0;
   z-index: 101;
 }
 
