--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,5 +1,11 @@
 menu {
-  background: linear-gradient(45deg, var(--green) 0%, var(--red) 100%);
+  background-color: var(--notebook);
+  background-image: linear-gradient(white 2px, transparent 2px),
+    linear-gradient(90deg, white 2px, transparent 2px),
+    linear-gradient(var(--cream) 1px, transparent 1px),
+    linear-gradient(90deg, var(--cream) 1px, transparent 1px);
+  background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
+  background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
   height: 100%;
   left: 140%;
   margin: 0;
@@ -13,6 +19,20 @@ menu {
 }
 
 body.menu-open menu {
-  left: 50%;
+  left: 80%;
   visibility: visible;
+}
+
+menu li {
+  margin-bottom: 1rem;
+}
+
+menu a {
+  color: var(--black);
+  text-decoration: none;
+}
+
+menu a:hover,
+menu a:focus {
+  border-bottom: 0.2rem solid;
 }
