Refactor notebook style

--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -17,5 +17,8 @@
   --red: rgb(255, 0, 0);
   --green: rgb(0, 255, 0);
   --cream: rgb(238, 238, 238);
-  --notebook: rgb(171, 206, 212);
+  --notebook: rgb(246, 236, 163);
+  --notebook-v-line: rgb(203, 170, 169);
+  --notebook-h-line: rgb(205, 200, 195);
+  --square-notebook: rgb(165, 205, 223);
 }
