--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,9 +1,9 @@
 menu {
-  background-color: var(--notebook);
-  background-image: linear-gradient(white 2px, transparent 2px),
-    linear-gradient(90deg, white 2px, transparent 2px),
-    linear-gradient(var(--cream) 1px, transparent 1px),
-    linear-gradient(90deg, var(--cream) 1px, transparent 1px);
+  background-color: var(--white);
+  background-image: linear-gradient(var(--square-notebook) 2px, transparent 2px),
+    linear-gradient(90deg, var(--square-notebook) 2px, transparent 2px),
+    linear-gradient(var(--square-notebook) 1px, transparent 1px),
+    linear-gradient(90deg, var(--square-notebook) 1px, transparent 1px);
   background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
   background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
   height: 100%;
