--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,11 +11,11 @@
 html,
 body {
   font-size: 19px;
+  line-height: 1.32;
 }
 
 body {
   font-family: var(--cursive);
-  padding: var(--base-space);
   position: relative;
   background-color: var(--notebook);
   background-image: linear-gradient(
@@ -26,7 +26,7 @@ body {
       transparent calc(var(--base-space) + 2px)
     ),
     linear-gradient(var(--notebook-h-line) 0.1rem, transparent 0.1rem);
-  background-size: 100% 1.15rem;
+  background-size: 100% 1.32rem;
 }
 
 h1,
@@ -43,6 +43,7 @@ h2 {
 section {
   height: 100vh;
   padding: var(--base-space);
+  border-bottom: 4px dashed;
 }
 
 ul {
@@ -56,5 +57,6 @@ img {
 }
 
 section > div {
-  max-width: 40rem;
+  max-width: 40em;
+  padding: var(--base-space);
 }
