--- a/src/main.css
+++ b/src/main.css
@@ -2,4 +2,5 @@
 @import './styles/global.css';
 @import './styles/header.css';
 @import './styles/menu.css';
+@import './styles/gracias.css';
 @import './styles/location.css';
