--- a/src/styles/location.css
+++ b/src/styles/location.css
@@ -5,3 +5,27 @@
   height: 60vh;
   background-color: var(--notebook);
 }
+
+.highlight-red a {
+  color: var(--white);
+  text-decoration: none;
+}
+
+.highlight-red a:hover,
+.highlight-red a:focus {
+  color: var(--black);
+  background-color: var(--hightlight-green);
+  border-bottom: 2px solid currentColor;
+}
+
+.highlight-green a {
+  color: var(--black);
+  text-decoration: none;
+}
+
+.highlight-green a:hover,
+.highlight-green a:focus {
+  color: var(--white);
+  background-color: var(--black);
+  border-bottom: 2px solid currentColor;
+}
