--- a/src/styles/gracias.css
+++ b/src/styles/gracias.css
@@ -5,4 +5,10 @@
   flex-direction: column;
   width: 100%;
   height: 90%;
+  max-width: 40em;
+  padding: var(--base-space);
 }
+
+/* section > div {
+
+} */
