draft form animation

--- a/src/main.css
+++ b/src/main.css
@@ -4,4 +4,5 @@
 @import './styles/menu.css';
 @import './styles/gracias.css';
 @import './styles/location.css';
+@import './styles/input.css';
 @import './styles/animation.css';
