Finish animation on RSVP

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,6 +47,9 @@ section {
   display: flex;
   flex-direction: column;
 }
+section:last-of-type {
+  border-bottom: none;
+}
 
 ul {
   list-style-image: url('../assets/dot.svg');
